--- a/src/main/webapp/resources/assets/css/black-dashboard.css
+++ b/src/main/webapp/resources/assets/css/black-dashboard.css
@@ -17787,3 +17787,20 @@ Copyright (c) 2015 Daniel Eden
 }
 
 /*# sourceMappingURL=dashboard-free.css.map */
+
+
+/* added new */
+.box {
+	position: relative;
+	max-width: 125px;
+	background-color: #00f2c3;
+	align-content: center;
+	vertical-align: middle;
+	display: flex;
+	min-width: 75px;
+	
+}
+.box:before {
+	content: "";
+	padding-top: 100%;
+}
