--- a/src/main/webapp/resources/assets/css/posMain.css
+++ b/src/main/webapp/resources/assets/css/posMain.css
@@ -1,10 +1,8 @@
 @charset "UTF-8";
 
-
-
 /* posMain */
-.box input[type = "button"] {
-	border:0;
+.box input[type="button"] {
+	border: 0;
 	background: none;
 	display: block;
 	margin: 10px auto;
@@ -19,36 +17,34 @@
 	position: static;
 }
 
-.box input[type="button"]:hover{
+.box input[type="button"]:hover {
 	background: #3498db;
 	text-transform: uppercase;
 	color: #ffffff;
-	
 }
 
 .box .data_table {
 	height: 30%;
 	position: static;
 }
- 
 
 /* The Modal (background) */
 .modaltest {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.1); /* Black w/ opacity */
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgb(0, 0, 0); /* Fallback color */
+	background-color: rgba(0, 0, 0, 0.1); /* Black w/ opacity */
 }
 
- /* Modal Content/Box */
-.box input[type = "button"] {
-	border:0;
+/* Modal Content/Box */
+.box input[type="button"] {
+	border: 0;
 	background: none;
 	display: block;
 	margin: 10px auto;
@@ -63,15 +59,12 @@
 	position: static;
 }
 
-
 .menu {
 	background: #ffffff !important;
 }
 
-
-
 .menuBtn {
-	border:0;
+	border: 0;
 	background: none;
 	display: block;
 	margin: 10px auto;
@@ -84,54 +77,52 @@
 	transition: 0.25s;
 	cursor: pointer;
 	position: static;
-	
 }
 
-.menuBtn :hover{
+.menuBtn :hover {
 	background: #3498db;
 	color: #ffffff;
 }
 
 /* 메뉴 선택 버튼 */
 .menu_select_button {
-	border:0;
+	border: 0;
 	background: none;
 	display: block;
 	margin: 5px 5px;
 	text-align: center;
 	border: 2px solid #3498db;
 	padding: 1px 2px;
-	width: 20%;
 	outline: none;
 	border-radius: 24px;
 	transition: 0.25s;
 	color: #3498db;
+	box-sizing: border-box;
+	width: 100%;
+	height: 90%;
 }
 
-.menu_select_button:hover{
+.menu_select_button:hover {
 	background: #3498db;
 	color: #ffffff;
 	text-transform: uppercase;
 }
 
-
-
 /* 메뉴 상단탭 버튼 */
-#mgr-2-8 {
+#pos-4-1 {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
 }
-		
- #mgr-2-8 li .active {
-	display: inline-block;
 
+#pos-4-1 li .active {
+	display: inline-block;
 	text-align: center;
 	text-decoration: none;
 	padding: 14px 16px;
 	font-size: 17px;
-	transition:0.3s;
+	transition: 0.3s;
 	background-color: #FAFAFA;
 	color: #3498db;
 	border: 2px solid #3498db;
@@ -139,14 +130,36 @@
 	transition: 0.25s;
 }
 
-#mgr-2-8 li a {
+#pos-4-1 li a {
 	display: inline-block;
 	color: #000000;
 	text-align: center;
 	text-decoration: none;
 	padding: 14px 16px;
 	font-size: 17px;
-	transition:0.3s;
+	transition: 0.3s;
 	border-radius: 5px;
 	transition: 0.25s;
+}
+
+
+
+.buttonlike{
+	display:block;
+	border-style:solid;
+	border-color:#bbb #888 #666 #aaa;
+	border-width:3px 4px 4px 3px;
+	width:9em;
+	height:2em;
+	background:#ccc;
+	color:#333;
+	line-height:2;
+	text-align:center;
+	text-decoration:none;
+	font-weight:900;
+}
+.buttonlike:hover{
+	border-color: #666 #aaa #bbb #888;
+	border-width:4px 3px 3px 4px;
+	color:#000;
 }
