--- a/src/main/webapp/resources/assets/css/posMain.css
+++ b/src/main/webapp/resources/assets/css/posMain.css
@@ -142,24 +142,68 @@
 	transition: 0.25s;
 }
 
-
-
-.buttonlike{
-	display:block;
-	border-style:solid;
-	border-color:#bbb #888 #666 #aaa;
-	border-width:3px 4px 4px 3px;
-	width:9em;
-	height:2em;
-	background:#ccc;
-	color:#333;
-	line-height:2;
-	text-align:center;
-	text-decoration:none;
-	font-weight:900;
+.sqbox {
+	position: relative;
+	overflow: hidden;
+	background: #4679BD;
+	text-align: center;
+	color: white;
+	display: inline-block;
+	font-weight: 600;
+	text-align: center;
+	white-space: normal;
+	vertical-align: middle;
+	user-select: none;
+	border: 1px solid white;
+	padding: 4px 2px;
+	font-size: 0.875rem;
+	line-height: 1.35em;
+	border-radius: 0.25rem;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+		border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	color: #ffffff;
+	background-color: #5e72e4;
+	border-color: white;
+	box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px
+		rgba(0, 0, 0, 0.08);
+	width: 98%
 }
-.buttonlike:hover{
-	border-color: #666 #aaa #bbb #888;
-	border-width:4px 3px 3px 4px;
-	color:#000;
+
+.sqbox:after {
+	content: "";
+	display: block;
+	padding-bottom: 40%;
+}
+
+.sqbox p {
+	text-align: right;
+}
+
+.sqbox:hover {
+	color: #ffffff;
+	background-color: #344675;
+	border-color: #243152;
+}
+
+.sqbox:focus, .sqbox.focus {
+	box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px
+		rgba(0, 0, 0, 0.08), 0 0 0 0 rgba(52, 70, 117, 0.5);
+}
+
+.sqbox.disabled, .sqbox:disabled {
+	color: #ffffff;
+	background-color: #344675;
+	border-color: #344675;
+}
+
+.sqbox:not (:disabled ):not (.disabled ):active, .sqbox:not (:disabled ):not
+	(.disabled ).active, .show>.sqbox {
+	color: #ffffff;
+	background-color: #243152;
+	border-color: #202c49;
+}
+
+.sqbox:not (:disabled ):not (.disabled ):active:focus, .sqbox:not (:disabled
+	):not (.disabled ).active:focus, .show>.sqbox:focus {
+	box-shadow: none, 0 0 0 0 rgba(52, 70, 117, 0.5);
 }
