--- a/src/main/webapp/resources/assets/css/board/boardList.css
+++ b/src/main/webapp/resources/assets/css/board/boardList.css
@@ -3,21 +3,104 @@
 body {
 		font-family : sans-serif;
 		font-size : 0.9em;
-		back-ground: #000000;
+		text-align : left;
+		background: #f5f6fa !important;
+		
 	}
 	
 	input[type=submit] {
 		border : none;
 	}
 	
-	div#wrapper {
-		width:900px;
-		margin : 0 auto;
+	/* 게시판 제목 */
+	#titleForm {
+		background: #3498db !important;
+		border: #3498db;
+		border-radius: 10px;
+		text-align: center;
+		margin-top: 50p !important;
+		height: 100px;
+		cursor: pointer;
+	}
+	#boardTitle{
+		color: #ffffff;
+		margin-top: 50p !important;
+		text-align: center;
+	}
+	
+	#boardTitle h2{
+		
+		
+		text-align: center;
+	}
+	
+	
+	div#wrapper-body {
+		text-align: center;
+		padding: 2px;
+		background: #3498db;
+		margin: 2px;
+		border-radius: 10px;
+	}
+	
+/* 	div#wrapper {
+		min-width: 80%;
+		text-align : center;
+		position: relative;
+	
+	}
+	
+	div#wrapper-header {
+		color: #ffffff;
+		text-align: center;
+		padding : 2px;
+		background: #3498db;
+		border-radius: 10px;
+		position: relative;
+		width: 100%;
+		text-align: center;
+		
+	}
+
+	div#wrapper-neck {
+		text-align : left;
+		padding: 2px;
+		margin: 5px;
+	}
+
+	
+	
+	div#wrapper-footer {
 		text-align : center;
 	}
 	
+	div#wrapper-header {
+	
+	}
+	
+	div#wrapper-header #titleForm {
+	
+	}
+	
+	div#wrapper-header h2{
+		color: #ffffff;
+		text-align: center;
+		font-size: 50px;
+		padding : 2px;
+		background: #3498db;
+		border-radius: 10px;
+	}
+	 */
+	
+	
+	
+	
 	table {
-		width : 900px;
+		width : 100%;
+		text-align: center;
+		background: #ffffff;
+		border-radius: 10px;
+		float: center;
 	}
 	
 	.title {
@@ -25,17 +108,22 @@ body {
 	}
 	
 	th {
-		background : #efefef;
+		background : #ffffff;
 	}
 	
-	.write {
-		text-align : right;
+	#index {
+		background: #ffffff;
+		border: 2px solid #3498db;
+		outline: none;
+		border-radius: 10px;
+		float: center;
+		
 	}
 	
-	.home {
-		text-align : left;
-	}
 	
+	
+	
+	/* 
 	a {
 		display : inline-block;
 	}
@@ -49,28 +137,76 @@ body {
 		color : #F00;
 	}
 	
-	.btn {
-		text-align : center;
-		border-radius : 0.5em;
-		width : 50px;
-		margin-top : 10px;
-		padding : 5px;
-		background : #eee;
+	 */
+	
+	/* 글쓰기 버튼 */
+	.writeBtn {
+		background: none;
+		display: block;
+		margin: 10px auto;
+		text-align: center;
+		color: #000000;
+		border: 2px solid #3498db;
+		padding: 10px 5px;
+		width: 10%;
+		float:right;
+		outline: none;
+		border-radius: 20px;
+		transition: 0.25s;
+		cursor: pointer;
+		/* position: static; */
 		
+	}
+	
+	.writeBtn:hover {
+		background: #3498db;
+		text-transform: uppercase;
+		color: #ffffff;
 	}
 	
 	input[type=submit]:hover{
 		font-weight:bold;
 	}
 	
+	
+	
+	
+	
 	#search {
 		text-align:right;
 	}
 	
+	#searchTable {
+
+		text-align: center;
 	
-#header {
-	color: #80ff00;
-	text-align: center;
-	padding : 2px;
-	background: #000000;
-}
+		border: 2px solid #3498db;
+		border-radius: 15px;
+		
+	}
+	
+	#search .button {
+		color: #000000;
+		text-align: center;
+		background: none;
+		display: block;
+
+		text-align: center !important;
+		border: 2px solid #3498db;
+
+		width: 70px;
+		height: 30px;
+		float:right;
+		outline: none;
+		border-radius: 10px;
+		transition: 0.25s;
+		cursor: pointer;
+	}
+	
+	#search .button:hover{
+		background: #113d5b !important;
+		text-transform: uppercase !important;
+		color: #ffffff !important;
+	}
+	
+	
