--- a/src/main/webapp/resources/assets/css/posMain.css
+++ b/src/main/webapp/resources/assets/css/posMain.css
@@ -207,3 +207,7 @@
 	):not (.disabled ).active:focus, .show>.sqbox:focus {
 	box-shadow: none, 0 0 0 0 rgba(52, 70, 117, 0.5);
 }
+
+.bg-gray {
+  background-color: #6c757d !important;
+}
