--- a/src/main/webapp/resources/assets/css/test.css
+++ b/src/main/webapp/resources/assets/css/test.css
@@ -133,6 +133,13 @@
 	
 }
 
+.form-control input[type = "text"]:focus {
+	background: #3498db !important;
+	color: #ffffff !important;
+	text-transform: uppercase !important;
+	
+}
+
 
 
 
