게시판 수정 내역입니다. - boardRegist - boardDetail - boardUpdate

--- a/src/main/webapp/resources/assets/css/board/boardList.css
+++ b/src/main/webapp/resources/assets/css/board/boardList.css
@@ -180,6 +180,7 @@ body {
 	}
 	
 	#search .button {
+		
 		color: #000000;
 		text-align: center;
 		background: none;
@@ -198,6 +199,7 @@ body {
 	}
 	
 	#search .button:hover{
+		border:#113d5b; 
 		background: #113d5b !important;
 		text-transform: uppercase !important;
 		color: #ffffff !important;
