--- a/src/main/webapp/resources/assets/css/board/boardDetail.css
+++ b/src/main/webapp/resources/assets/css/board/boardDetail.css
@@ -1,55 +1,136 @@
 @charset "UTF-8";
 
-div#wrapper{
-		width : 800px;
-		margin : 0 auto;
-		back-ground: #ffff00;
-	}
-	div#wrapper>h2 {
-		text-align : center;
-	}
-	div#wrapper table {
-		margin:0 auto;
-		width : 800px;
-	}
-	th {
-		width: 100px;
-	}
-	pre {
-		width : 600px;
-		height : 200px;
-		overflow: auto;
-	}
-	table.reply {
-		width : 800px;
-	}
-	input[name='text'] {
-		width : 600px;
-	}
-	input[type='submit'] {
-		width : 600px;
-		color: #blue;
-		cursor: pointer;
-	}
-	
-	span {
-		display: inline-block;
 
-		margin : 5px;
-	}
-	td.replycontent {
-		width : auto;
-	}
-	td.replytext {
-		width : 600px;
-		text-align : left;
-	}
-	td.replysub {
-		width : 80px;
-		text-align : right;
-	}
-	td.replybtn{
-		width : 100px;
-		text-align : right;
-		
-	}
+.card-footer{
+	text-align: center;
+}
+
+/* 본문 버튼 모음 */
+#board_update {
+	background: none;
+	display: inline-block;
+	text-align: center;
+	color: #000000;
+	border: 2px solid #3498db;
+	padding: 2px 5px; 
+	width: 70px;
+	height: 30px;
+	outline: none;
+	border-radius: 10px;
+	transition: 0.25s;
+	cursor: pointer;
+	position: center relative;
+	
+}
+
+#board_update:hover {
+	background: #3498db;
+	text-transform: uppercase;
+	color: #ffffff;
+}
+
+#board_delete{
+	background: none;
+	display: inline-block;
+	text-align: center;
+	color: #000000;
+	border: 2px solid #3498db;
+	padding: 2px 5px; 
+	width: 70px;
+	height: 30px;
+	outline: none;
+	border-radius: 10px;
+ 	transition: 0.25s;
+	cursor: pointer;
+}
+
+#board_delete:hover {
+	background: #3498db;
+	text-transform: uppercase;
+	color: #ffffff;
+}
+
+#returnBoard {
+	background: none;
+	display: inline-block;
+	text-align: center;
+	color: #000000;
+	border: 2px solid #3498db;
+	padding: 2px 5px; 
+	width: 70px;
+	height: 30px;
+	outline: none;
+	border-radius: 10px;
+ 	transition: 0.25s;
+	cursor: pointer;
+	
+} 
+#returnBoard:hover {
+	background: #82ccdd;
+	text-transform: uppercase;
+	border: 2px solid #82ccdd;
+	color: #ffffff;
+}
+
+.comments_box{
+	height: 5%;
+	border: solid #000000;
+	border-width: 1px;
+	margin: 5px 10px;
+	
+	
+}
+
+/* .comments_seq {
+	width: 5%;
+	display: inline-block;	
+} */
+
+.comments_writer{
+	width: 15%;
+	display: inline-block;
+	padding-left: 10px;
+	padding-top: 5px;
+	vertical-align: top;
+	
+}
+
+.comments_content{
+	width: 55%;
+	display: inline-block;	
+	
+}
+
+.comments_regdate{
+	width: 15%;
+	display: inline-block;	
+	vertical-align: top;
+}
+
+.comments_delete{
+	width: 5%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.comments_modify{
+	width: 5%; 
+	display: inline-block;
+	vertical-align: top;
+}
+
+/* 삭제 아이콘 */
+.comments_delete{
+	margin-left: 5px;
+	padding-top: 7px;
+	display: inline-block;
+	vertical-align: top;
+	color: solid #3498db;
+}
+
+.comments_delete:hover{
+	cursor: pointer;
+	color: solid #3498db;
+}
+
+
