--- a/src/main/webapp/resources/assets/css/board/boardDetail.css
+++ b/src/main/webapp/resources/assets/css/board/boardDetail.css
@@ -7,12 +7,14 @@
 
 /* 본문 버튼 모음 */
 #board_update {
+	float: right;
 	background: none;
 	display: inline-block;
 	text-align: center;
 	color: #000000;
 	border: 2px solid #3498db;
-	padding: 2px 5px; 
+	padding: 2px 5px;
+	margin: 0px 3px;
 	width: 70px;
 	height: 30px;
 	outline: none;
@@ -29,13 +31,16 @@
 	color: #ffffff;
 }
 
+/* 글삭제 버튼 */
 #board_delete{
+	float: right;
 	background: none;
 	display: inline-block;
 	text-align: center;
 	color: #000000;
 	border: 2px solid #3498db;
-	padding: 2px 5px; 
+	padding: 2px 5px;
+	margin: 0px 3px;
 	width: 70px;
 	height: 30px;
 	outline: none;
@@ -50,7 +55,145 @@
 	color: #ffffff;
 }
 
+/* 목록으로 돌아가는 버튼 */
 #returnBoard {
+	float: right;
+	background: none;
+	display: inline-block;	
+	text-align: center;
+	color: #000000;
+	border: 2px solid #3498db;
+	padding: 2px 5px;
+	margin: 0px 3px;
+	width: 70px;
+	height: 30px;
+	outline: none;
+	border-radius: 10px;
+ 	transition: 0.25s;
+	cursor: pointer;
+	
+} 
+#returnBoard:hover {
+	background: #3498db;
+	text-transform: uppercase;
+	border: 2px solid #82ccdd;
+	color: #ffffff;
+}
+
+
+/* 댓글 출력 박스(div) */
+.comments_box{
+	height: 5%;
+	border: solid #82ccdd;
+	border-width: 1px;
+	border-radius: 10px;
+	margin: 5px 10px;
+	
+	
+}
+
+/* 댓글 작성자 이름 */
+.comments_writer{
+	width: 15%;
+	display: inline-block;
+	padding-left: 10px;
+	padding-top: 5px;
+	vertical-align: top;
+	
+}
+/* 댓글 내용 */
+.comments_content{
+	width: 55%;
+	display: inline-block;	
+	
+}
+
+/* 댓글 작성 날짜 */
+.comments_regdate{
+	width: 13%;
+	margin-left: 40px;
+	display: inline-block;	
+	vertical-align: top;
+}
+
+/* 댓글 삭제 div + icon */
+.comments_delete{
+	width: 3%;
+	margin-left: 5px;
+	padding-top: 3px;
+	display: inline-block;
+	vertical-align: top;
+	
+}
+
+.comments_delete:hover{
+	cursor: pointer;
+	color: #3498db !important;
+}
+
+/* 댓글 수정 div + 아이콘 */
+.comments_update{
+	width: 6%; 
+	margin-left: 5px;
+	padding-top: 3px;
+	display: inline-block;
+	vertical-align: top;	
+}
+.comments_update:hover {
+	cursor: pointer;
+	color: #3498db !important;
+}
+
+/* 댓글 수정버튼 클릭시 버튼 레이아웃 */
+.comments_update2{
+	width: 6%; 
+	float: right;
+	margin-left: 5px;
+	padding-top: 3px;
+	display: inline-block;
+	vertical-align: top;	
+}
+/* 댓글 수정버튼 클릭시 화면전환후 버튼 */
+.comments_update_button{
+	font-size: 10px;
+	width: 60px; 
+	margin-left: 5px;
+	padding-top: 1px;
+	display: inline-block;
+	vertical-align: top;
+	background: none;
+	text-align: center;
+	color: #000000;
+	border: 2px solid #3498db;
+	height: 25px;
+	outline: none;
+	border-radius: 10px;
+	transition: 0.25s;
+	cursor: pointer;
+}
+
+.comments_update_button:hover{
+	background: #3498db;
+	text-transform: uppercase;
+	color: #ffffff;
+}
+
+#comment_regist_form {
+	text-align: center;
+	vertical-align: middle;
+	padding-bottom: 3px;
+}
+
+/* 댓글 입력창 */
+#board_comments_content {
+	width: 85% !important;
+	height: 30px !important;
+	position: relative;
+	
+}
+
+/* 댓글 등록 버튼 */
+#comButton{
 	background: none;
 	display: inline-block;
 	text-align: center;
@@ -64,73 +207,19 @@
  	transition: 0.25s;
 	cursor: pointer;
 	
-} 
-#returnBoard:hover {
-	background: #82ccdd;
+}
+
+#comButton:hover {
+	background: #3498db;
 	text-transform: uppercase;
-	border: 2px solid #82ccdd;
 	color: #ffffff;
 }
 
-.comments_box{
-	height: 5%;
-	border: solid #000000;
-	border-width: 1px;
-	margin: 5px 10px;
-	
-	
-}
-
-/* .comments_seq {
-	width: 5%;
-	display: inline-block;	
-} */
-
-.comments_writer{
-	width: 15%;
-	display: inline-block;
-	padding-left: 10px;
-	padding-top: 5px;
-	vertical-align: top;
+/* 댓글 수정 입력창 */
+.update_insert_bar{
+	width: 85% !important;
+	height: 30px !important;
+	position: relative;
 	
 }
-
-.comments_content{
-	width: 55%;
-	display: inline-block;	
-	
-}
-
-.comments_regdate{
-	width: 15%;
-	display: inline-block;	
-	vertical-align: top;
-}
-
-.comments_delete{
-	width: 5%;
-	display: inline-block;
-	vertical-align: top;
-}
-
-.comments_modify{
-	width: 5%; 
-	display: inline-block;
-	vertical-align: top;
-}
-
-/* 삭제 아이콘 */
-.comments_delete{
-	margin-left: 5px;
-	padding-top: 7px;
-	display: inline-block;
-	vertical-align: top;
-	color: solid #3498db;
-}
-
-.comments_delete:hover{
-	cursor: pointer;
-	color: solid #3498db;
-}
-
 
