--- a/src/main/webapp/resources/assets/css/member/join.css
+++ b/src/main/webapp/resources/assets/css/member/join.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
-#company_IdResult{
+/* #company_IdResult{
 	vertical-align: middle;
 	background: yellow !important;
-	
-}
+} */
+
 #join_footer{
 	margin: 5px 5px;
 	
@@ -20,7 +20,7 @@
 	padding: 2px 5px;
 	margin: 10px 3px;
 	width: 100px;
-	height: 40px;
+/* 	height: 40px; */
 	outline: none;
 	border-radius: 10px;
 	transition: 0.25s;
