--- a/src/main/webapp/resources/assets/css/test.css
+++ b/src/main/webapp/resources/assets/css/test.css
@@ -36,7 +36,7 @@
 		.tabcontent {
 			display: none;
 			background-color:rgb(250,250,250);
-			/* padding: 6px 12px; */
+			padding: 6px 30px;
 		/* 	text-align: center; */
 			color:#fff;
 		}
@@ -141,8 +141,40 @@
 }
 
 
+#mgr-2-8 {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+#mgr-2-8 li .active {
+	display: inline-block;
+	text-align: center;
+	text-decoration: none;
+	padding: 14px 16px;
+	font-size: 17px;
+	transition: 0.3s;
+	background-color: #FAFAFA;
+	color: #3498db;
+	border: 2px solid #3498db;
+	border-radius: 24px;
+	transition: 0.25s;
+}
+
+#mgr-2-8 li a {
+	display: inline-block;
+	color: #000000;
+	text-align: center;
+	text-decoration: none;
+	padding: 14px 16px;
+	font-size: 17px;
+	transition: 0.3s;
+	border-radius: 5px;
+	transition: 0.25s;
+}
 
 
+</style>
 
 
-	</style>
