--- a/src/main/webapp/resources/assets/css/posMain.css
+++ b/src/main/webapp/resources/assets/css/posMain.css
@@ -209,5 +209,8 @@
 }
 
 .bg-gray {
-  background-color: #b2b2b2 !important;
+  background-color: #626262 !important;
+}
+.bg-white{
+   background-color: #dae0f2 !important;
 }
