--- a/src/main/webapp/resources/assets/css/black-dashboard.css
+++ b/src/main/webapp/resources/assets/css/black-dashboard.css
@@ -10120,6 +10120,10 @@ button.bg-darker:focus {
   color: #e14eca !important;
 }
 
+.text-blue{
+	color: blue !important;
+}
+
 a.text-primary:hover,
 a.text-primary:focus {
   color: #d725bb !important;
@@ -12563,25 +12567,31 @@ img {
 }
 
 .modal.modal-default .form-control::-moz-placeholder {
-  color: rgba(255, 255, 255, 1);
+  color: black;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
 .modal.modal-default .form-control:-moz-placeholder {
-  color: rgba(255, 255, 255, 0.4);
+  color: black;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
 .modal.modal-default .form-control::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.4);
+  color: black;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 
-.modal.modal-default .form-control:-ms-input-placeholder {
+/* .modal.modal-default .form-control:-ms-input-placeholder {
   color: rgba(255, 255, 255, 0.4);
+  opacity: 1;
+  filter: alpha(opacity=100);
+} */
+
+.modal.modal-default .form-control:-ms-input-placeholder {
+  color: black;
   opacity: 1;
   filter: alpha(opacity=100);
 }
